[metadata]
name = vespene
home-page = https://github.com/vespene-hub/vespene/
summary = Vespene client
description-file = 
    README.md
author = Hervé Beraud
author-email = herveberaud.pro@gmail.com
licence = MIT
classifier =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT License
    Operating System :: POSIX
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6

[files]
packages =
    vespene

[extras]
devel=
    fixtures
    pbr
    tox
    bandit

[entry_points]
console_scripts =
    vespene = vespene.__main__:main

[wheel]
universal = 1
